<resources>
    <string name="app_name">LegiTrack</string>
    <string name="welcome_msg">WELCOME!</string>
    <string name="welcome_msg2">Let\'s get started! First, tell us where you are:</string>
    <string name="cont">CONTINUE</string>
    <string name="interest">Choose your topics of interest:</string>
    <string name="done">DONE</string>
    <string name="bill_display">Upcoming Bills</string>
    <string name="underline">________________________</string>
    <string name="reaction_title">Reactions Page</string>
    <string name="reaction_done">SUBMIT</string>
    <string name="bill_name">Bill H.R. 2234</string>
    <string name="title">Title:            </string>
    <string name="subject">Subject:            </string>
    <string name="summary">Summary:            </string>
    <string name="send_comment">SEND COMMENT</string>
    <string name="comment">Comment Here:</string>
    <string name="oppose">Oppose</string>
    <string name="support">Support</string>
    <string name="viewComments">VIEW COMMENTS</string>
    <string name="commentsList">Comments:</string>
    <string name="back">BACK</string>
    <string name="avg_score">AVERAGE SCORE: </string>
    <string name="avg_score_num">0 </string>
</resources>