<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="5dp"
    android:background="@color/pale_green"
    android:backgroundTint="@color/pale_green"
    android:textAlignment="center"
    tools:context=".BillInfo">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginTop="28dp"
        android:text="@string/bill_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bill_info_title"
        android:layout_width="302dp"
        android:layout_height="75dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="68dp"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bill_info_subjects"
        android:layout_width="302dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="68dp"
        android:autoLink="web"
        android:background="@color/white"
        android:linksClickable="true"
        android:paddingTop="5dp"
        android:text="@string/subject"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="#0A1F8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bill_info_summary"
        android:layout_width="302dp"
        android:layout_height="150dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="65dp"
        android:background="@color/white"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="97dp"
        android:background="@color/black"
        android:onClick="sendComment"
        android:text="@string/send_comment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/view_Comments"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="595dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/lato"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="viewComments"
        android:text="@string/viewComments"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>