<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_green"
    android:textAlignment="center"
    tools:context=".Reaction">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/bill_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/push"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="143dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:onClick="pushtoDB"
        android:text="@string/reaction_done"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reaction_test" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="46dp" /><![CDATA[

    app:layout_constraintTop_toTopOf="parent" />
    ]]>

    <EditText
        android:id="@+id/reaction_test"
        android:layout_width="292dp"
        android:layout_height="275dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:drawableTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:foregroundTint="@color/white"
        android:hint="@string/comment"
        android:inputType="textLongMessage"
        android:paddingStart="5dp"
        android:paddingEnd="2dp"
        android:paddingBottom="240dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>