<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_green"
    android:textAlignment="center"
    tools:context=".ViewComments">

    <TextView
        android:id="@+id/newtextview1"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:text="@string/bill_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goBack"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="181dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato"
        android:onClick="sendComment"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newtextview2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="46dp" /><![CDATA[

    app:layout_constraintTop_toTopOf="parent" />



















    ]]>

    <TextView
        android:id="@+id/newtextview2"
        android:layout_width="264dp"
        android:layout_height="61dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:text="@string/support"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newtextview1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="411dp"
        android:layout_height="273dp"
        android:background="#FFFFFF"
        android:paddingStart="7dp"
        android:paddingTop="3dp"
        android:paddingEnd="5dp"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="242dp" />

</androidx.constraintlayout.widget.ConstraintLayout>